<resources>
    <string name="app_name">iOptical Store</string>
    <string name="slogan" translatable="false">Welcome to iOptical Store</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<!--    <String name="google_place_api">AIzaSyDEZ7VrIBRfjX5e-z72VXMLgy9u3YL3Yqg</String>-->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_Product_Detail">Product Details</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_cart">Cart</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_product_list">Product List</string>

    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_menu">Categories</string>
    <string name="action_clear_cart">Clear Cart</string>


    <!--COUNTRIES-->
    <string-array name="co">
        <item>Jeddah</item>
        <item>Riyadh</item>
        <item>Dammam</item>
    </string-array>
</resources>
