<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.iOptical.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.iOptical.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.example.iOptical.ui.productDetail.productDetailFragment"
        android:label="@string/menu_Product_Detail"
        tools:layout="@layout/fragment_product_detail" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.iOptical.ui.tools.ToolsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.iOptical.ui.cart.cartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_product_list"
        android:name="com.example.iOptical.ui.productlist.ProductListFragment"
        android:label="@string/menu_product_list"
        tools:layout="@layout/fragment_product_list" />
</navigation>